--- a/manifest.json
+++ b/manifest.json
@@ -219,7 +219,10 @@
 					"js/lib/flexible_css.js",
 					"js/mui.min.js",
 					"css/mui.min.css",
-					"js/lib/flexible.js"
+					"js/lib/flexible.js",
+					"css/wd.css",
+					"img/wd_bg.png",
+					"img/head_img.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -261,7 +264,8 @@
 					"js/lib/flexible.js",
 					"jxfyList.html",
 					"css/jxfy.css",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"js/lib/jquery-1.10.2.min.js"
 				],
 				"refer": [
 					"wd.html"
@@ -297,7 +301,8 @@
 			"jxfyList.html": {
 				"resources": [
 					"css/mui.min.css",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"css/jxfyList.css"
 				],
 				"refer": [],
 				"priority": 0
