--- a/manifest.json
+++ b/manifest.json
@@ -222,9 +222,16 @@
 					"js/lib/flexible.js",
 					"css/wd.css",
 					"img/wd_bg.png",
-					"img/head_img.png"
+					"img/head_img.png",
+					"fonts/mui.ttf",
+					"img/per.png",
+					"img/sz.png",
+					"img/fav.png",
+					"js/lib/jquery-1.10.2.min.js"
 				],
-				"refer": [],
+				"refer": [
+					"page/person.html"
+				],
 				"priority": 0
 			},
 			"sy.html": {
@@ -303,6 +310,13 @@
 					"css/mui.min.css",
 					"fonts/mui.ttf",
 					"css/jxfyList.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"page/person.html": {
+				"resources": [
+					"css/mui.min.css"
 				],
 				"refer": [],
 				"priority": 0
