--- a/manifest.json
+++ b/manifest.json
@@ -497,7 +497,8 @@
 					"img/xsmm_ion.png"
 				],
 				"refer": [
-					"page/wj_pwd.html"
+					"page/wj_pwd.html",
+					"page/fast_zc.html"
 				],
 				"priority": 0
 			},
@@ -509,7 +510,24 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"js/lib/flexible.js"
+					"js/lib/flexible.js",
+					"css/fast_zc.css",
+					"img/ycmm.png"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"page/fast_zc.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"css/fast_zc.css",
+					"js/lib/flexible_css.js",
+					"js/lib/jquery-1.10.2.min.js",
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"js/lib/flexible.js",
+					"img/ycmm.png",
+					"img/xsmm_ion.png"
 				],
 				"refer": [],
 				"priority": 0
