服务商城页面

--- a/manifest.json
+++ b/manifest.json
@@ -293,7 +293,9 @@
 					"js/lib/flexible.js",
 					"img/1.jpg",
 					"img/4.jpg",
-					"img/3.jpg"
+					"img/3.jpg",
+					"js/lib/jquery-1.10.2.min.js",
+					"page/fwsc.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -512,7 +514,8 @@
 					"css/mui.min.css",
 					"js/lib/flexible.js",
 					"css/fast_zc.css",
-					"img/ycmm.png"
+					"img/ycmm.png",
+					"img/xsmm_ion.png"
 				],
 				"refer": [],
 				"priority": 0
