--- a/manifest.json
+++ b/manifest.json
@@ -264,7 +264,8 @@
 					"img/per.png",
 					"img/sz.png",
 					"img/fav.png",
-					"js/lib/jquery-1.10.2.min.js"
+					"js/lib/jquery-1.10.2.min.js",
+					"js/lib/app_config.js"
 				],
 				"refer": [
 					"page/person.html",
@@ -446,10 +447,12 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"js/lib/flexible.js"
+					"js/lib/flexible.js",
+					"js/lib/app_config.js"
 				],
 				"refer": [
-					"page/setpwd.html"
+					"page/setpwd.html",
+					"wd.html"
 				],
 				"priority": 0
 			},
@@ -541,11 +544,15 @@
 					"js/lib/flexible.js",
 					"fonts/mui.ttf",
 					"img/ycmm.png",
-					"img/xsmm_ion.png"
+					"img/xsmm_ion.png",
+					"css/style.css",
+					"js/lib/form_yz.js",
+					"js/lib/app_config.js"
 				],
 				"refer": [
 					"page/wj_pwd.html",
-					"page/fast_zc.html"
+					"page/fast_zc.html",
+					"wd.html"
 				],
 				"priority": 0
 			},
@@ -625,6 +632,16 @@
 					"img/xq_2.png",
 					"img/xq_3.png"
 				],
+				"refer": [
+					"page/liJiShenQing.html"
+				],
+				"priority": 0
+			},
+			"page/liJiShenQing.html": {
+				"resources": [
+					"css/liJiShenQ.css",
+					"css/fast_zc.css"
+				],
 				"refer": [],
 				"priority": 0
 			}
@@ -635,5 +652,9 @@
 				"css/mui.css"
 			]
 		}
-	}
+	},
+	"unpackage":[
+	  "css/mui.css",
+	  "js/mui.js"
+	]
 }
