--- a/manifest.json
+++ b/manifest.json
@@ -464,9 +464,14 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"js/lib/flexible.js"
+					"js/lib/flexible.js",
+					"js/lib/sha1.js",
+					"js/lib/md5.js",
+					"js/lib/app_config.js"
 				],
-				"refer": [],
+				"refer": [
+					"wd.html"
+				],
 				"priority": 0
 			},
 			"page/search.html": {
@@ -584,9 +589,16 @@
 					"css/mui.min.css",
 					"js/lib/flexible.js",
 					"img/ycmm.png",
-					"img/xsmm_ion.png"
+					"img/xsmm_ion.png",
+					"js/lib/form_yz.js",
+					"js/lib/app_config.js",
+					"js/lib/fast_zc.js",
+					"js/lib/sha1.js",
+					"js/lib/md5.js"
 				],
-				"refer": [],
+				"refer": [
+					"wd.html"
+				],
 				"priority": 0
 			},
 			"page/saleFuWu.html": {
