--- a/manifest.json
+++ b/manifest.json
@@ -296,7 +296,8 @@
 					"img/yzwt.png",
 					"fonts/mui.ttf",
 					"img/fypic.png",
-					"img/sjfw.png"
+					"img/sjfw.png",
+					"js/lib/app_config.js"
 				],
 				"refer": [
 					"jxfy.html",
