--- a/manifest.json
+++ b/manifest.json
@@ -302,7 +302,9 @@
 				"refer": [
 					"jxfy.html",
 					"page/saleFuWu.html",
-					"page/loupan_detail.html"
+					"page/loupan_detail.html",
+					"page/topNewsInfo.html",
+					"page/fyTail.html"
 				],
 				"priority": 0
 			},
@@ -614,9 +616,18 @@
 				"resources": [
 					"css/saleFuWu.css",
 					"img/shouffwu.png",
-					"fonts/mui.ttf"
+					"fonts/mui.ttf",
+					"js/lib/flexible_css.js",
+					"js/lib/jquery-1.10.2.min.js",
+					"js/mui.min.js",
+					"js/lib/flexible.js",
+					"js/lib/app_config.js",
+					"css/mui.min.css"
 				],
-				"refer": [],
+				"refer": [
+					"wd.html",
+					"sy.html"
+				],
 				"priority": 0
 			},
 			"page/loupan_detail.html": {
@@ -663,7 +674,15 @@
 			"page/liJiShenQing.html": {
 				"resources": [
 					"css/liJiShenQ.css",
-					"css/fast_zc.css"
+					"css/fast_zc.css",
+					"js/lib/app_config.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"page/topNewsInfo.html": {
+				"resources": [
+					"css/person.css"
 				],
 				"refer": [],
 				"priority": 0
