--- a/manifest.json
+++ b/manifest.json
@@ -686,6 +686,14 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"page/add_sfz.html": {
+				"resources": [
+					"css/person.css",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
