--- a/manifest.json
+++ b/manifest.json
@@ -517,7 +517,9 @@
 					"img/fav.png",
 					"js/lib/app_config.js"
 				],
-				"refer": [],
+				"refer": [
+					"page/login.html"
+				],
 				"priority": 0
 			},
 			"page/mycollection.html": {
