修改首页bug周2018-3-21 16:48

--- a/manifest.json
+++ b/manifest.json
@@ -793,7 +793,17 @@
 					"img/addyewuimg.png",
 					"js/lib/flexible_css.js",
 					"js/lib/flexible.js",
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"img/addfwuxiao1.png",
+					"img/addfwuxiao5.png",
+					"img/addzhifwu4.png",
+					"img/addfwuxiao6.png",
+					"img/addzhifwu3.png",
+					"img/addfwuxiao4.png",
+					"img/addfwuxiao2.png",
+					"img/addzhifwu2.png",
+					"img/addzhifwu.png",
+					"img/addfwuxiao3.png"
 				],
 				"refer": [],
 				"priority": 0
