--- a/manifest.json
+++ b/manifest.json
@@ -897,6 +897,17 @@
 					"page/person.html"
 				],
 				"priority": 0
+			},
+			"page/add_sfz.html": {
+				"resources": [
+					"js/lib/flexible_css.js",
+					"js/lib/jquery-1.10.2.min.js",
+					"js/mui.min.js",
+					"js/lib/flexible.js",
+					"js/lib/app_config.js"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
