--- a/manifest.json
+++ b/manifest.json
@@ -489,7 +489,8 @@
 				],
 				"refer": [
 					"page/setpwd.html",
-					"wd.html"
+					"wd.html",
+					"page/disclaimer.html"
 				],
 				"priority": 0
 			},
@@ -915,6 +916,18 @@
 				"resources": [
 					"js/lib/flexible_css.js",
 					"js/lib/jquery-1.10.2.min.js",
+					"js/mui.min.js",
+					"js/lib/flexible.js",
+					"js/lib/app_config.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"page/disclaimer.html": {
+				"resources": [
+					"js/lib/flexible_css.js",
+					"js/lib/jquery-1.10.2.min.js",
+					"css/disclaimer.css",
 					"js/mui.min.js",
 					"js/lib/flexible.js",
 					"js/lib/app_config.js"
