出房三方两方不可编辑bug

--- a/manifest.json
+++ b/manifest.json
@@ -450,7 +450,9 @@
 					"js/mui.min.js",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"js/lib/flexible.js"
+					"js/lib/flexible.js",
+					"js/lib/app_config.js",
+					"img/warming.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -925,7 +927,9 @@
 					"js/lib/flexible.js",
 					"js/lib/app_config.js"
 				],
-				"refer": [],
+				"refer": [
+					"page/person.html"
+				],
 				"priority": 0
 			},
 			"page/disclaimer.html": {
