--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
 	"icons": {
 		"72": "icon.png"
 	},
-	"launch_path": "index.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+	"launch_path": "welcome.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
 	"developer": {
 		"name": "",/*开发者名称*/
 		"email": "",/*开发者邮箱地址*/
@@ -110,7 +110,7 @@
 	"plus": {
 		"splashscreen": {
 			"autoclose": true,/*是否自动关闭程序启动界面，true表示应用加载应用入口页面后自动关闭；false则需调plus.navigator.closeSplashscreen()关闭*/
-			"waiting": true,
+			"waiting": false,
 			"delay": "3000"
 		},
 		"runmode": "liberate",/*应用的首次启动运行模式，可取liberate或normal，liberate模式在第一次启动时将解压应用资源（Android平台File API才可正常访问_www目录）*/
@@ -786,7 +786,8 @@
 					"js/lib/flexible_css.js",
 					"js/lib/jquery-1.10.2.min.js",
 					"js/lib/flexible.js",
-					"js/lib/app_config.js"
+					"js/lib/app_config.js",
+					"fonts/mui.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -939,7 +940,8 @@
 					"js/lib/jquery-1.10.2.min.js",
 					"js/mui.min.js",
 					"js/lib/flexible.js",
-					"js/lib/app_config.js"
+					"js/lib/app_config.js",
+					"fonts/mui.ttf"
 				],
 				"refer": [
 					"page/person.html"
@@ -972,6 +974,22 @@
 					"css/fast_zc.css"
 				],
 				"refer": [],
+				"priority": 0
+			},
+			"welcome.html": {
+				"resources": [
+					"img/w2.png",
+					"js/lib/castapp.js",
+					"img/w3.png",
+					"js/mui.min.js",
+					"img/w1.png",
+					"css/mui.min.css",
+					"js/lib/flexible_css.js",
+					"js/lib/flexible.js"
+				],
+				"refer": [
+					"index.html"
+				],
 				"priority": 0
 			}
 		},
